--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ display: block;
   content: '';
   display: none;
   top: 4px;
-  left: 2.4px;
+  left: 1.65px;
   width: 8px;
   height: 1px;
   border-bottom: 1.5px solid rgba(131, 1, 0, 0.7);
@@ -220,24 +220,66 @@ display: block;
   width: 100%;
   display: flex;
   overflow: hidden;
-  height: 36px;
-  line-height: 36px;
+  height: 33px;
+  line-height: 33px;
+
 }
 
 .tabs .tab {
-  /* float: left; */
-
-  background: white;
-  color: #777777;
-  /* height: 31px; */
-  /* margin: 2px 8px 0; */
+  display: flex;
+  align-items: center;
+  vertical-align: middle;
+  background: rgb(97 94 94);
+  color: #000;
+  font-size: 13px;
+  font-weight: 500;
   padding: 0 8px;
+  margin-right: 1px;
   cursor: pointer;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
 }
-
+.tab .tab__favi{
+vertical-align: middle;
+width: 16px;
+height: 11px;
+margin-right: 5px;
+}
+.tab .tab__text {
+  margin-right: 10px;
+}
+.tab .tab__close {
+  display: block;
+  position: relative;
+  height: 11px;
+  padding-right: 15px;
+}
+.tab .tab__close:hover {
+  /* background-color: rgb(195, 195, 195); */
+  background-color: rgb(195, 195, 195);
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+}
+.tab__close::before, .tab__close::after {
+  position: absolute;
+  content: '';
+  /* display: none; */
+  top: 4px;
+  left: 1.65px;
+  width: 11px;
+  height: 1px;
+  border-bottom: 1.2px solid rgba(35, 35, 35, 0.7);
+}
+.tab__close::before{
+  transform: rotate(45deg);
+}
+.tab__close::after{
+  transform: rotate(-45deg);
+}
 .tabs .tab_active {
   color: #dd4b39;
-  /* border-bottom: 3px solid #dd4b39; */
+  background-color: rgb(195, 195, 195);
 }
 
 .panels .panel {
