--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 li {
   list-style: none;
 
@@ -18,23 +19,28 @@ canvas {
 
 
 .display {
-  display: block!important;
+  display: block !important;
 }
+
 .menu-list {
   display: none;
 }
+
 .list-item {
   padding: 10px 20px;
   position: relative;
   cursor: pointer;
   transition: all .15s ease-in 0s;
 }
+
 .list-item span {
   transition: all .15s ease-in 0s;
 }
+
 .list-item:hover span::before {
   transition: all .15s ease-in 0s;
 }
+
 .list-item:hover span::before {
   transition: all .15s ease-in 0s;
   transform: rotate(180deg);
@@ -50,10 +56,12 @@ canvas {
   height: 20px;
   width: 20px;
 }
-.checked{
+
+.checked {
   color: rgba(187, 187, 187, 0.769);
   text-decoration: line-through;
 }
+
 /* font-family: 'Montserrat', sans-serif; */
 body {
   font-family: 'Montserrat', sans-serif;
@@ -97,14 +105,19 @@ button {
 }
 
 .last-wrp {
-    position: absolute;
-    top: 0px;
-    left: 10%;
+  position: absolute;
+  top: 0px;
+  left: 10%;
   display: flex;
+  align-items: center;
   padding: 10px;
   /* flex: 0 1 700px; */
   margin: auto;
   /* padding: 10px; */
+}
+
+.last-timer {
+  width: 400px;
 }
 
 .screen {
@@ -135,25 +148,34 @@ button {
   border-radius: 8px;
   background: white;
 }
-.header-button:hover .header-button--close::before{
-display: block;
+
+.header-button:hover .header-button--close::before {
+  display: block;
 }
+
 .header-button:hover .header-button--close::after {
   display: block;
 }
-.header-button:hover .header-button--maximize::before{
+
+.header-button:hover .header-button--maximize::before {
   display: block;
 }
+
 .header-button:hover .header-button--minimize::before {
   display: block;
-}.header-button:hover .header-button--minimize::after {
+}
+
+.header-button:hover .header-button--minimize::after {
   display: block;
 }
+
 .header-button--close {
   position: relative;
   background: rgb(223, 95, 87);
 }
-.header-button--close::before, .header-button--close::after {
+
+.header-button--close::before,
+.header-button--close::after {
   position: absolute;
   content: '';
   display: none;
@@ -163,10 +185,12 @@ display: block;
   height: 1px;
   border-bottom: 1.5px solid rgba(131, 1, 0, 0.7);
 }
-.header-button--close::before{
+
+.header-button--close::before {
   transform: rotate(45deg);
 }
-.header-button--close::after{
+
+.header-button--close::after {
   transform: rotate(-45deg);
 }
 
@@ -290,21 +314,25 @@ display: block;
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
 }
-.tab .tab__favi{
-vertical-align: middle;
-width: 16px;
-height: 11px;
-margin-right: 5px;
+
+.tab .tab__favi {
+  vertical-align: middle;
+  width: 16px;
+  height: 11px;
+  margin-right: 5px;
 }
+
 .tab .tab__text {
   margin-right: 10px;
 }
+
 .tab .tab__close {
   display: block;
   position: relative;
   height: 12px;
   padding-right: 15px;
 }
+
 .tab .tab__close:hover {
   /* background-color: rgb(195, 195, 195); */
   background-color: rgb(195, 195, 195);
@@ -317,7 +345,9 @@ margin-right: 5px;
   
   transform: translate(0, -50%) */
 }
-.tab__close::before, .tab__close::after {
+
+.tab__close::before,
+.tab__close::after {
   position: absolute;
   content: '';
   /* display: none; */
@@ -327,12 +357,15 @@ margin-right: 5px;
   height: 1px;
   border-bottom: 1.2px solid rgba(35, 35, 35, 0.7);
 }
-.tab__close::before{
+
+.tab__close::before {
   transform: rotate(45deg);
 }
-.tab__close::after{
+
+.tab__close::after {
   transform: rotate(-45deg);
 }
+
 .tabs .tab_active {
   color: #dd4b39;
   background-color: rgb(195, 195, 195);
